# gata-inference

./: .dockerignore  Dockerfile  README.md  pyproject.toml  serve.py  trivy.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml.txt
src/: __init__.py  main.py
src/schemas/: schemas.py
src/utils/: model.py
tests/schemas/: __init__.py  test_schemas.py
tests/utils/: test_model.py
